--- a/pruebaVue/package.json
+++ b/pruebaVue/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.6",
+    "cors": "^2.8.5",
     "mysql2": "^3.2.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
