--- a/pruebaVue/package.json
+++ b/pruebaVue/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "knex": "^2.4.2",
     "mysql2": "^3.2.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
