--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "knex": "^2.4.2",
     "mysql2": "^3.3.0",
-    "pinia": "^2.0.35"
+    "pinia": "^2.0.35",
+    "uuid": "^9.0.0"
   }
 }
