--- a/OhMyDog/package.json
+++ b/OhMyDog/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@stripe/stripe-js": "^1.54.0",
     "axios": "^1.4.0",
     "pinia": "^2.0.35",
     "quasar": "^2.6.0",
