--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "knex": "^2.4.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.0",
     "node-oauth2-server": "^2.4.0",
     "nodemailer": "^6.9.1",
